--- a/pages/Home/css/style.css
+++ b/pages/Home/css/style.css
@@ -881,10 +881,10 @@ input[type="search"]::-webkit-search-results-decoration {
   cursor: default;
   opacity: 0.5;
 }
-.testimonials-carousel .swiper-slide {
+.testimonials-tcarousel .swiper-slide {
   opacity: 0.8;
 }
-.testimonials-carousel .swiper-slide.swiper-slide-active {
+.testimonials-tcarousel .swiper-slide.swiper-slide-active {
   opacity: 1;
 }
 @keyframes pulseLoop {
@@ -2905,3 +2905,25 @@ input[type="search"]::-webkit-search-results-decoration {
 .ckw6o > div {
   background-color: rgb(51 65 85/0.2);
 }
+
+
+/**carousel styles**/
+
+.carousel {
+  display: flex;
+  overflow: hidden;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.mycslide {
+  flex: 0 0 100%;
+  transition: transform 1s;
+}
+
+.mycslide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
