--- a/pages/Home/css/style.css
+++ b/pages/Home/css/style.css
@@ -704,7 +704,7 @@ select {
 }
 @media (min-width: 768px) {
   .cmbrg {
-    font-size: 3.5rem;
+    font-size: 5rem;
     line-height: 1;
     letter-spacing: -0.017em;
   }
@@ -727,7 +727,7 @@ select {
   border-radius: 9999px;
   border-width: 1px;
   border-color: transparent;
-  font-size: 0.875rem;
+  font-size: 1.3rem;
   line-height: 1.5715;
   font-weight: 500;
   transition-property: color, background-color, border-color,
@@ -741,6 +741,13 @@ select {
     backdrop-filter, -webkit-backdrop-filter;
   transition-duration: 150ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (max-width: 640px) {
+  .ccr9i {
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+  }
 }
 .ccr9i {
   padding-left: 1rem;
@@ -1095,7 +1102,7 @@ input[type="search"]::-webkit-search-results-decoration {
   margin-bottom: 0.5rem;
 }
 .ca0bb {
-  margin-bottom: 0.75rem;
+  /* margin-bottom: 0.75rem; */
 }
 .cgbi5 {
   margin-bottom: 1rem;
@@ -1108,6 +1115,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .c4dav {
   margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 .cqbh5 {
   margin-left: 0.25rem;
@@ -1221,7 +1229,7 @@ input[type="search"]::-webkit-search-results-decoration {
   height: auto;
 }
 .c3ztf {
-  height: 100%;
+  /* height: 100%; */
 }
 .ctkta {
   min-height: 100vh;
@@ -1270,7 +1278,7 @@ input[type="search"]::-webkit-search-results-decoration {
   width: fit-content;
 }
 .c0l3r {
-  width: 100%;
+  width: 50%;
 }
 .cxe5f {
   max-width: 48rem;
@@ -1560,7 +1568,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .cytct {
   --tw-bg-opacity: 1;
-  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+  background-color: rgb(26 85 247 / var(--tw-bg-opacity));
 }
 .c2q9s {
   --tw-bg-opacity: 1;
@@ -1584,8 +1592,8 @@ input[type="search"]::-webkit-search-results-decoration {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 .cpkpj {
-  --tw-gradient-from: #a855f7 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(168 85 247 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-from: #1a55f7 var(--tw-gradient-from-position);/*1a55f7*/
+  --tw-gradient-to: rgb(26 85 247 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 .c1wf5 {
@@ -1625,7 +1633,7 @@ input[type="search"]::-webkit-search-results-decoration {
   fill: currentColor;
 }
 .c6fbz {
-  fill: #a855f7;
+  fill: #1a55f7;/*a855f7*/
 }
 .cnbxt {
   fill: #e2e8f0;
@@ -1640,7 +1648,10 @@ input[type="search"]::-webkit-search-results-decoration {
   padding: 0.25rem;
 }
 .c47li {
-  padding: 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .cxfql {
   padding: 1px;
@@ -1745,6 +1756,8 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .cbtot {
   text-align: right;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .c8fn4 {
   font-family: Inter, sans-serif;
@@ -1770,7 +1783,7 @@ input[type="search"]::-webkit-search-results-decoration {
   letter-spacing: -0.017em;
 }
 .cabeq {
-  font-size: 1.125rem;
+  font-size: 0.9rem;
   line-height: 1.5;
   letter-spacing: -0.017em;
 }
@@ -1832,7 +1845,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .ckvr2 {
   --tw-text-opacity: 1;
-  color: rgb(168 85 247 / var(--tw-text-opacity));
+  color: rgb(26 85 247 / var(--tw-text-opacity));
 }
 .cnjs5 {
   --tw-text-opacity: 1;
@@ -1872,7 +1885,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .ctvi9 {
   --tw-text-opacity: 1;
-  color: rgb(20 184 166 / var(--tw-text-opacity));
+  color: rgb(26 85 247 / var(--tw-text-opacity));
 }
 .c3btc {
   color: transparent;
@@ -1926,7 +1939,7 @@ input[type="search"]::-webkit-search-results-decoration {
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .cr50j {
-  --tw-shadow-color: rgb(168 85 247 / 0.25);
+  --tw-shadow-color: rgb(26 85 247 / 0.25);
   --tw-shadow: var(--tw-shadow-colored);
 }
 .cqwcq {
@@ -2063,8 +2076,8 @@ input[type="search"]::-webkit-search-results-decoration {
     90deg,
     transparent,
     transparent 48px,
-    #a855f7 48px,
-    #a855f7 49px
+    #1a55f7 48px,
+    #1a55f7 49px
   );
 }
 .cbw4r {
@@ -2080,8 +2093,8 @@ input[type="search"]::-webkit-search-results-decoration {
   background: repeating-linear-gradient(
     transparent,
     transparent 48px,
-    #a855f7 48px,
-    #a855f7 49px
+    #1a55f7 48px,
+    #1a55f7 49px
   );
 }
 .cdvmy {
@@ -2093,8 +2106,8 @@ input[type="search"]::-webkit-search-results-decoration {
   );
 }
 .crc38 {
-  background: linear-gradient(#a855f7, #a855f7) padding-box,
-    linear-gradient(#a855f7, #e9d5ff 75%, transparent 100%) border-box;
+  background: linear-gradient(#1a55f7, #1a55f7) padding-box,
+    linear-gradient(#1a55f7, #e9d5ff 75%, transparent 100%) border-box;
 }
 .cxli6 {
   background: linear-gradient(#0f172a, #0f172a) padding-box,
@@ -2199,7 +2212,7 @@ input[type="search"]::-webkit-search-results-decoration {
 .c78uy::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
-  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+  background-color: rgb(26 85 247 / var(--tw-bg-opacity));
 }
 .cxnq1::before {
   content: var(--tw-content);
@@ -2531,7 +2544,7 @@ input[type="search"]::-webkit-search-results-decoration {
     scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .car0u:hover .cmcgw {
-  fill: #a855f7;
+  fill: #1a55f7;
 }
 .cjz9y:hover .cri0w {
   opacity: 1;
@@ -2542,14 +2555,14 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .cjz9y.swiper-slide-active .cxxj9 {
   --tw-bg-opacity: 1;
-  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+  background-color: rgb(26 85 247 / var(--tw-bg-opacity));
 }
 .cjz9y.swiper-slide-active .c5bh9 {
   opacity: 1;
 }
 .ctq3b:checked ~ .c8jt9 {
   --tw-bg-opacity: 1;
-  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+  background-color: rgb(26 85 247 / var(--tw-bg-opacity));
 }
 .ctq3b:checked ~ .cjgfw::before {
   content: var(--tw-content);
@@ -2568,7 +2581,7 @@ input[type="search"]::-webkit-search-results-decoration {
   outline-color: #9ca3af;
 }
 .ctq3b:checked:focus-visible ~ .cv8bw {
-  outline-color: #a855f7;
+  outline-color: #1a55f7;
 }
 @media not all and (min-width: 768px) {
   .c07ac {
@@ -2884,7 +2897,7 @@ input[type="search"]::-webkit-search-results-decoration {
 .ciiuv > div:nth-of-type(4n + 3)::before {
   content: var(--tw-content);
   --tw-border-opacity: 1;
-  border-color: rgb(168 85 247 / var(--tw-border-opacity));
+  border-color: rgb(26 85 247 / var(--tw-border-opacity));
 }
 @media not all and (min-width: 768px) {
   .c2uqp > div:nth-of-type(4n + 3) {
@@ -3088,4 +3101,8 @@ input[type="search"]::-webkit-search-results-decoration {
 
 .cmbrg {
   display: inline-block;
+}
+
+.textbold {
+  font-weight: bold;
 }
