--- a/css/home.css
+++ b/css/home.css
@@ -1229,7 +1229,7 @@ input[type="search"]::-webkit-search-results-decoration {
   height: auto;
 }
 .c3ztf {
-  /* height: 100%; */
+  height: 100%;
 }
 .ctkta {
   min-height: 100vh;
