--- a/css/header-home.css
+++ b/css/header-home.css
@@ -1357,7 +1357,7 @@
       width: 66.666667%;
     }
     .astro-ES6RJE63 .lg\:w-auto {
-      width: auto;
+      width: 35%;
     }
     .astro-ES6RJE63 .lg\:w-max {
       width: -moz-max-content;
